--- a/src/app/components/home-row/home-row.html
+++ b/src/app/components/home-row/home-row.html
@@ -1,4 +1,4 @@
-<section class="home-row">
+<section class="home-row" [class]="entityType">
   <div class="home-row-header">
     <button class="home-row-title" [class]="entityType" [routerLink]="[routePath]">{{ title }}</button>
     <div class="display-container">
