--- a/src/app/details/character-details/character-details.html
+++ b/src/app/details/character-details/character-details.html
@@ -35,11 +35,13 @@
                 </div>
             </div>
             <div class="details-section primary-section horizontal-section">
-                <div class="details-section secondary-section">
+                <!-- <div class="details-section secondary-section"> -->
+                <div>
                     <label class="primary-label" for="character-physical-description">Physical Description</label>
                     <textarea id="character-physical-description" class="medium-textarea" formControlName="characterPhysicalDescription" placeholder="Describe their appearance, height, build, distinguishing features..."></textarea>
                 </div>
-                <div class="details-section secondary-section">
+                <!-- <div class="details-section secondary-section"> -->
+                <div>
                     <label class="primary-label" for="character-non-physical-description">Non-Physical Description</label>
                     <textarea id="character-non-physical-description" class="medium-textarea" formControlName="characterNonPhysicalDescription" placeholder="Describe their personality, mannerisms, speech patterns..."></textarea>
                 </div>
