--- a/src/app/pages/event-home/event-home.html
+++ b/src/app/pages/event-home/event-home.html
@@ -13,7 +13,7 @@
   </aside>
   <article class="main-article">
     <div class="view-toggle">
-      <button [class.active]="viewMode === 'timeline'" (click)="setViewMode('timeline')" class="view-button">
+      <button [class.active]="viewMode === 'timeline'" (click)="setViewMode('timeline')" class="view-button primary">
         📅 Timeline View
       </button>
       <button [class.active]="viewMode === 'grid'" (click)="setViewMode('grid')" class="view-button">
