--- a/src/app/pages/location-home/location-home.html
+++ b/src/app/pages/location-home/location-home.html
@@ -7,6 +7,7 @@
       [filterConfig]="filterConfig"
       [allCharacters]="allCharacters"
       [allStories]="allStories"
+      [allLocations]="allLocations"
       (filterChange)="onFilterChange($event)">
     </app-search-filter>
   </aside>
