--- a/src/app/components/search-filter/search-filter.css
+++ b/src/app/components/search-filter/search-filter.css
@@ -3,15 +3,15 @@
 /* Search Input Styles */
 .search-container {
   display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-bottom: 15px;
+  /* align-items: center; */
+  /* gap: 8px; */
+  /* margin-bottom: 15px; */
   position: relative;
 }
 
 .search-input {
-  width: 15.625rem;
-  padding: 10px;
+  /* width: 15.625rem; */
+  /* padding: 10px; */
   background-color: inherit;
   border: none;
   border-bottom: solid 1px var(--g3-color);
@@ -63,7 +63,7 @@
 .filter-section {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.1rem;
   margin-bottom: 2rem;
   border: 1px solid var(--g3-color);
   border-radius: 8px;
@@ -82,7 +82,7 @@
   cursor: pointer;
   padding: 10px 0;
   border-bottom: 1px solid var(--g4-color);
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   transition: all 0.3s ease;
 }
 
@@ -133,8 +133,8 @@
 .checkbox-group {
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  max-height: 12.5rem;
+  /* gap: 8px; */
+  max-height: 12rem;
   overflow-y: auto;
   padding: 10px;
   border: 1px solid var(--g4-color);
