--- a/src/app/pages/event-home/event-home.css
+++ b/src/app/pages/event-home/event-home.css
@@ -11,14 +11,15 @@
 .view-button {
   background: var(--g4-color);
   color: var(--g1-color);
-  border: 2px solid var(--g3-color);
-  padding: 10px 20px;
+  /* border: 2px solid var(--g3-color); */
+  /* padding: 10px 20px; */
+  padding: 5px 10px;
   border-radius: 25px;
   cursor: pointer;
   font-weight: bold;
   font-size: 14px;
   transition: all 0.3s ease;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   letter-spacing: 1px;
 }
 
