--- a/src/app/components/timeline/timeline-event/timeline-event.html
+++ b/src/app/components/timeline/timeline-event/timeline-event.html
@@ -1,4 +1,4 @@
-<div class="timeline-item" [class.current-event]="isCurrentEvent()">
+<div class="timeline-item" [class.current-event]="isCurrentEvent()" [class.horizontal]="orientation() === 'horizontal'" [class.vertical]="orientation() === 'vertical'">
   @if (shouldShowYear()) {
     <div class="year-marker">
       <span class="year-label">{{ getYear(event().date) }}</span>
