--- a/src/app/pages/event-home/event-home.html
+++ b/src/app/pages/event-home/event-home.html
@@ -28,6 +28,7 @@
       <app-timeline
         [events]="filteredEventList"
         title="Events Timeline"
+        orientation="horizontal"
         noResultsMessage="No events found. Try adjusting your search or add a new event."
         (addElement)="addWorldEvent()"
         (tagClicked)="onTagClicked($event)">
